--- a/info.yaml
+++ b/info.yaml
@@ -1,3 +1,4 @@
+yaml_version: 6
 # Tiny Tapeout project information
 project:
   title:        "FSM de arranque con prescaler"      # Project title
@@ -18,24 +19,22 @@ project:
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
     - "tt_um_fsm_top.v"
-    - "tt_um_fsm_top.v"
-    - "tt_um_fsm_top.v"
+    - "arranque_rampa_parcial.v"
+    - "prescaler_clk.v"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
-  # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
+  ui[0]: "[1:0]sw"
+  ui[1]: "btn0"
+  ui[2]: "clk"
   ui[3]: ""
   ui[4]: ""
   ui[5]: ""
   ui[6]: ""
   ui[7]: ""
 
-  # Outputs
-  uo[0]: ""
+  uo[0]: "[2:0]led"
   uo[1]: ""
   uo[2]: ""
   uo[3]: ""
@@ -44,7 +43,6 @@ pinout:
   uo[6]: ""
   uo[7]: ""
 
-  # Bidirectional pins
   uio[0]: ""
   uio[1]: ""
   uio[2]: ""
@@ -55,4 +53,4 @@ pinout:
   uio[7]: ""
 
 # Do not change!
-yaml_version: 6
+
