--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,7 +28,8 @@ jobs:
           cd test
           make clean
           make
-          test -f results.xml && ! grep failure results.xml || true
+          # make will return success even if the test fails, so check for failure in the results.xml
+          ! grep failure results.xml
 
       - name: Test Summary
         uses: test-summary/action@v2.3
