--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 .DS_Store
 .idea
+.vscode
 *.vcd
 runs
-tt_submission
-src/user_config.json
-src/config_merged.json
-test/sim_build
+src/__tinytapeout
 test/__pycache__/
-test/results.xml
 test/gate_level_netlist.v
+test/results.xml
+test/sim_build
+failures_report.json
+abc.history
